# caffe-deepdriving

./: .cproject  .gitattributes  .gitignore  .project  CMakeLists.txt  README.md
include/caffe/layers/: data_layer.hpp
include/caffe/util/: db.hpp  db_leveldb.hpp  db_lmdb.hpp
patches/: 0001-DeepDriving-related-changes-to-caffe.patch  0002-Added-DeepDriving-applications-as-caffe-tools.patch  0003-Add-possibility-to-seek-to-a-database-end.patch
src/caffe/: solver.cpp
src/caffe/layers/: data_layer.cpp  euclidean_loss_layer.cpp  euclidean_loss_layer.cu
tools/: CMakeLists.txt  torcs_record.cpp  torcs_run.cpp  torcs_verify.cpp  torcs_verify_fast.cpp  torcs_visualize_database.cpp
tools/torcs/: Arguments.cpp  Arguments.hpp  Database.cpp  Database.hpp  DriveController.cpp  DriveController.hpp  ErrorMeasurement.cpp  ErrorMeasurement.hpp  Image.cpp  Image.hpp  Indicators.cpp  Indicators.hpp  NeuralNet.cpp  NeuralNet.hpp  Semantic.cpp  Semantic.hpp  SharedMemory.cpp  SharedMemory.hpp
torcs/: torcs_record.sh  torcs_run.sh  torcs_train.sh  torcs_verify.sh  torcs_verify_fast.sh  torcs_visualize_database.sh
torcs/pre_trained/: driving_mean_1F.binaryproto  driving_run_1F.prototxt  driving_solver_1F.prototxt  driving_train_1F.prototxt  driving_train_1F_iter_140000.caffemodel
